--- a/comicbin/app/views/comics/_form.html.erb
+++ b/comicbin/app/views/comics/_form.html.erb
@@ -1,6 +1,7 @@
 <div class='col-lg-6'>
   <div class='well'>
-
+  
+  <%= form_for(@comic) do |f| %>
   <!-- WRITE THE CORRECT FORM HEADER AND BLOCK USING ERB -->
     <% if @comic.errors.any? %>
       <div id="error_explanation">
@@ -15,18 +16,25 @@
     <% end %>
 
     <div class="form-group">
+      <%= f.label :title %><br>
+    <%= f.text_field :title, class: "form-control" %>
       <!-- DISPLAY A TITLE LABEL -->
       <!-- DISPLAY A TEXT FIELD AND ATTACH THE CLASS OF 'form-control' TO THIS FIELD -->
     </div>
     <div class="form-group">
+         <%= f.label :description %><br>
+    <%= f.text_field :description, class: "form-control" %>
       <!-- DISPLAY A DESCRIPTION LABEL -->
       <!-- DISPLAY A TEXT FIELD AND ATTACH THE CLASS OF 'form-control' TO THIS FIELD -->
     </div>
     <div class="form-group">
+      <%= f.label :image_url %><br>
+    <%= f.text_field :image_url, class: "form-control" %>
       <!-- DISPLAY AN IMAGE LABEL -->
       <!-- DISPLAY A TEXT FIELD ATTACH THE CLASS OF 'form-control' TO THIS FIELD -->
     </div>
     <div class="actions">
+      <%= f.submit "Create Comic", class: "btn btn-primary" %>
       <!-- DISPLAY A SUBMIT BUTTON WITH A CLASS OF 'btn btn-primary' -->
     </div>
 
