--- a/comicbin/app/views/comics/show.html.erb
+++ b/comicbin/app/views/comics/show.html.erb
@@ -1,13 +1,10 @@
 <div class='row'>
   <div class='col-md-5'>
-    <!-- INSERT COMIC COVER IMAGE HERE WITH ERB.
-         ATTACH THE CLASS of 'img-responsive' TO THIS LINK -->
+    <%= image_tag @comic.image_url, {:class => "image-responsive", size: "342x455"} %>
   </div>
   <div class='col-md-7'>
-    <h1><!-- INSERT COMIC BOOK TITLE HERE WITH ERB --></h1>
-    <h4><!-- INSERT COMIC BOOK DESCRIPTION HERE WITH ERB --></h4>
-    <!-- INSERT LINK TO DELETE A COMIC BOOK HERE.
-         ATTACH A CLASS of 'btn btn-warning' TO THIS LINK.
-         ALSO INCLUDE A CONFIRMATION MESSAGE 'Are you sure?' -->
+    <h1><%= @comic.title %></h1>
+    <h4><%= @comic.description %></h4>
+    <%= link_to 'Delete Comic', destroy_path(@comic), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-warning" %>
   </div>
 </div>
